--- a/assets/styles/_index.scss
+++ b/assets/styles/_index.scss
@@ -40,7 +40,7 @@ h2 {
 
 .login-form__container {
     width: 100%;
-    min-height: 100vh;
+    min-height: 110vh;
 
     /*     ELEMS-POSITIONING    */
     @include flex-center;
@@ -66,7 +66,8 @@ h2 {
         padding: 30px 0 50px 0;
 
         .login-form__title {
-            padding-bottom: 41px;
+            padding-top: 15px;
+            letter-spacing: 10px;
             font-family: Ubuntu-Bold;
             font-size: 48px;
             color: black;
@@ -79,14 +80,14 @@ h2 {
         .login-form {
             width: 100%;
             border-radius: 10px;
-            background-color: rgba($color: #000000, $alpha: 0.);
+            background-color: rgba($color: #000000, $alpha: 0.5);
 
             padding: 5px 0 33px 0;
 
             .wrap-input {
                 width: 100%;
                 position: relative;
-                border-bottom: 1px solid #e6e6e6;
+                border-bottom: 1px solid #490059;
                 padding: 29px 0;
 
                 .input {
@@ -132,7 +133,6 @@ h2 {
 
 /*      SUB-GENERAL     */
 
-
 button {
     border: none;
 }
@@ -140,6 +140,10 @@ button {
 input {
     outline: none;
     border: none;
+
+    &::placeholder {
+        color: $main-color;
+    }
 }
 
 button,
