--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -32,7 +32,7 @@ h2 {
 /*      FORM STYLES     */
 .login-form__container {
   width: 100%;
-  min-height: 100vh;
+  min-height: 110vh;
   /*     ELEMS-POSITIONING    */
   display: flex;
   justify-content: center;
@@ -55,7 +55,8 @@ h2 {
   padding: 30px 0 50px 0;
 }
 .login-form__container .login-form__wrapper .login-form__title {
-  padding-bottom: 41px;
+  padding-top: 15px;
+  letter-spacing: 10px;
   font-family: Ubuntu-Bold;
   font-size: 48px;
   color: black;
@@ -67,13 +68,13 @@ h2 {
 .login-form__container .login-form__wrapper .login-form {
   width: 100%;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 5px 0 33px 0;
 }
 .login-form__container .login-form__wrapper .login-form .wrap-input {
   width: 100%;
   position: relative;
-  border-bottom: 1px solid #2d004f;
+  border-bottom: 1px solid #490059;
   padding: 29px 0;
 }
 .login-form__container .login-form__wrapper .login-form .wrap-input .input {
@@ -121,6 +122,9 @@ button {
 input {
   outline: none;
   border: none;
+}
+input::placeholder {
+  color: white;
 }
 
 button,
