--- a/assets/styles/_index.scss
+++ b/assets/styles/_index.scss
@@ -27,6 +27,10 @@ html {
 
 a {
     text-decoration: none;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 p,
@@ -40,7 +44,7 @@ h2 {
 
 .login-form__container {
     width: 100%;
-    min-height: 110vh;
+    min-height: 100vh;
 
     /*     ELEMS-POSITIONING    */
     @include flex-center;
@@ -66,11 +70,12 @@ h2 {
         padding: 30px 0 50px 0;
 
         .login-form__title {
-            padding-top: 15px;
+            padding-bottom: 15px;
             letter-spacing: 10px;
             font-family: Ubuntu-Bold;
-            font-size: 48px;
-            color: black;
+            font-size: 56px;
+            color: $main-color;
+            text-shadow: 4px 4px 5px rgb(192, 0, 192), 0 0 2em blue, 0 0 0.2em blue;
             line-height: 1.2;
             text-align: center;
             text-transform: uppercase;
@@ -80,7 +85,7 @@ h2 {
         .login-form {
             width: 100%;
             border-radius: 10px;
-            background-color: rgba($color: #000000, $alpha: 0.5);
+            background-color: rgba($color: #000000, $alpha: 0.6);
 
             padding: 5px 0 33px 0;
 
@@ -116,17 +121,17 @@ h2 {
     .login-form__btn {
         font-family: Ubuntu-Bold;
         @include flex-center;
-        font-size: 18px;
+        font-size: 21px;
         color: $main-color;
         line-height: 1.2;
         text-transform: uppercase;
         align-items: center;
         padding: 0 20px;
-        min-width: 160px;
-        height: 42px;
-        border-radius: 21px;
+        min-width: 190px;
+        height: 50px;
+        border-radius: 24px;
         position: relative;
-        background: -webkit-linear-gradient(left, #2d0159, #6d2280, #120064);
+        background: -webkit-linear-gradient(left, #a900c3, #6d2280, #120064);
     }
 }
 
@@ -142,7 +147,13 @@ input {
     border: none;
 
     &::placeholder {
+        text-transform: uppercase;
+        font-size: 24px;
         color: $main-color;
+    }
+
+    &:hover {
+        cursor: pointer;
     }
 }
 
@@ -163,14 +174,4 @@ textarea {
 
 .login-form__btn:hover {
     cursor: pointer;
-}
-
-
-#errorMsg {
-    @include flex-center;
-    font-family: Ubuntu-Bold;
-    font-size: 21px;
-    font-weight: 500;
-    font-style: italic;
-    color: rgb(127, 3, 3);
 }
