--- a/assets/styles/_index.scss
+++ b/assets/styles/_index.scss
@@ -1,160 +1,157 @@
-@import 'vars.scss';
+@import "vars.scss";
 
 /*      GENERAL     */
 
 html {
-    max-width: 1600px;
-    min-width: 300px;
-    margin: 0 auto;
+  max-width: 1600px;
+  min-width: 300px;
+  margin: 0 auto;
 
-    body {
-        font-family: 'Roboto', 'Source Sans Pro', sans-serif;
-        max-width: 100%;
+  body {
+    font-family: "Roboto", "Source Sans Pro", sans-serif;
+    max-width: 100%;
 
-        .container {
-            width: 100%;
-            margin: 0 auto;
-        }
-
+    .container {
+      width: 100%;
+      margin: 0 auto;
     }
+  }
 }
 
 * {
-    padding: 0;
-    box-sizing: border-box;
-    /* means that all the things inside have internal limits in order to hide y-scroll */
+  padding: 0;
+  box-sizing: border-box;
+  /* means that all the things inside have internal limits in order to hide y-scroll */
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 
-    &:hover {
-        cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 p,
 h1,
 h2 {
-    margin: 0;
+  margin: 0;
 }
 
 /*      FORM STYLES     */
 
-
 .login-form__container {
-    width: 100%;
-    min-height: 100vh;
+  width: 100%;
+  min-height: 100vh;
 
-    /*     ELEMS-POSITIONING    */
-    @include flex-center;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 15px;
+  /*     ELEMS-POSITIONING    */
+  @include flex-center;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 15px;
 
-    /*      BG-POSITIONING     */
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+  /*      BG-POSITIONING     */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
 
-    z-index: 1;
-    /* in order not to cover log-in form */
+  z-index: 1;
+  /* in order not to cover log-in form */
 
-    .login-form__wrapper {
-        width: 500px;
-        border-radius: 10px;
-        overflow: hidden;
-        background: 0 0;
+  .login-form__wrapper {
+    width: 500px;
+    border-radius: 10px;
+    overflow: hidden;
+    background: 0 0;
 
-        padding: 30px 0 50px 0;
+    padding: 30px 0 50px 0;
 
-        .login-form__title {
-            padding-bottom: 15px;
-            letter-spacing: 10px;
-            font-family: Ubuntu-Bold;
-            font-size: 56px;
-            color: $main-color;
-            text-shadow: 4px 4px 5px rgb(192, 0, 192), 0 0 2em blue, 0 0 0.2em blue;
-            line-height: 1.2;
-            text-align: center;
-            text-transform: uppercase;
-            display: block;
-        }
-
-        .login-form {
-            width: 100%;
-            border-radius: 10px;
-            background-color: rgba($color: #000000, $alpha: 0.6);
-
-            padding: 5px 0 33px 0;
-
-            .wrap-input {
-                width: 100%;
-                position: relative;
-                border-bottom: 1px solid #490059;
-                padding: 20px 0;
-
-                .input {
-                    font-family: Ubuntu-Regular;
-                    font-size: 20px;
-                    color: rgb(4, 55, 0);
-                    line-height: 1.2;
-                    display: block;
-                    width: 100%;
-                    height: 30px;
-                    background: 0 0;
-                    padding: 0 10px 0 80px;
-                    transition: all .4s;
-                }
-            }
-        }
+    .login-form__title {
+      padding-bottom: 15px;
+      letter-spacing: 10px;
+      font-family: Ubuntu-Bold;
+      font-size: 56px;
+      color: $main-color;
+      text-shadow: 4px 4px 5px rgb(192, 0, 192), 0 0 2em blue, 0 0 0.2em blue;
+      line-height: 1.2;
+      text-align: center;
+      text-transform: uppercase;
+      display: block;
     }
+
+    .login-form {
+      width: 100%;
+      border-radius: 10px;
+      background-color: rgba($color: #000000, $alpha: 0.6);
+
+      padding: 5px 0 15px 0;
+
+      .wrap-input {
+        width: 100%;
+        position: relative;
+        border-bottom: 1px solid #490059;
+        padding: 20px 0;
+
+        .input {
+          font-family: Ubuntu-Regular;
+          font-size: 20px;
+          color: rgb(4, 55, 0);
+          line-height: 1.2;
+          display: block;
+          width: 100%;
+          height: 30px;
+          background: 0 0;
+          padding: 0 10px 0 80px;
+          transition: all 0.4s;
+        }
+      }
+    }
+  }
 }
 
 .container-login-form__btn {
-    width: 100%;
+  width: 100%;
+  @include flex-center;
+  flex-wrap: wrap;
+  margin-top: 15px;
+
+  .login-form__btn {
+    font-family: Ubuntu-Bold;
     @include flex-center;
-    flex-wrap: wrap;
-    margin-top: 32px;
-
-    .login-form__btn {
-        font-family: Ubuntu-Bold;
-        @include flex-center;
-        font-size: 21px;
-        color: $main-color;
-        line-height: 1.2;
-        text-transform: uppercase;
-        align-items: center;
-        padding: 0 20px;
-        min-width: 190px;
-        height: 50px;
-        border-radius: 24px;
-        position: relative;
-        background: -webkit-linear-gradient(left, #a900c3, #6d2280, #120064);
-    }
+    font-size: 21px;
+    color: $main-color;
+    line-height: 1.2;
+    text-transform: uppercase;
+    align-items: center;
+    padding: 0 20px;
+    min-width: 190px;
+    height: 50px;
+    border-radius: 24px;
+    position: relative;
+    background: -webkit-linear-gradient(left, #a900c3, #6d2280, #120064);
+  }
 }
-
 
 /*      SUB-GENERAL     */
 
 button {
-    border: none;
+  border: none;
 }
 
 input {
-    outline: none;
-    border: none;
+  outline: none;
+  border: none;
 
-    &::placeholder {
-        text-transform: uppercase;
-        font-size: 24px;
-        color: $main-color;
-    }
+  &::placeholder {
+    text-transform: uppercase;
+    font-size: 24px;
+    color: $main-color;
+  }
 
-    &:hover {
-        cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 button,
@@ -162,16 +159,14 @@ input,
 optgroup,
 select,
 textarea {
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
-
 
 /*     CURSOR-SETTINGS    */
 
-
 .login-form__btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
